+ Added images and fixed formatting

--- a/Web Portfolio/index.html
+++ b/Web Portfolio/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Portfolio</h1>
+    <h1>Mark Kenji</h1>
       <div class="nav">
         <nav>
             <ul>
@@ -21,23 +21,19 @@
   </header>
 
   <section id="about">
+    <img src="images/portrait.jpg" width="100%" height="100%" alt="Big picture">
     <div class="container">
-      <img src="placeholder" alt="Big picture">
-      <h2>Hello</h2>
-      <p>Hi i am mark (placeholder) YAPYAPYAPYAPYAPYAPYA
-        PYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPY
-        APYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPY
-        APYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAP
-        YAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAP
-        YAPYAPYAPYAPYAPYAPYAP</p>
+      <p><b>Mark Kenji Paulino</b> is a <b>Creative computing</b> student in <b>Bathspa University</b> RAK.
+        He specializes in AI voice cloning and synthesizing. Mark Kenji is an avid tinkerer and strives to
+        learn more about the world of machine learning and future technologies enabled by the advancement of AI.</p>
     </div>
   </section>
 
   <section id="projects">
     <div class="container">
-      <h2>Projects</h2>
+      <h2>Recent Projects</h2>
       <div class="project">
-        <img src="placeholder" alt="Big picture">
+        <img src="images/FTS_CHRock.jpeg" width="512" height="512" alt="Big picture">
         <h3>(placeholder)</h3>
         <p>Description (placeholder) YAPYAPYAPYAPYAPYAPYA
             PYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPY
@@ -47,7 +43,7 @@
             YAPYAPYAPYAPYAPYAPYAP</p>
       </div>
       <div class="project">
-        <img src="placeholder" alt="Big picture">
+        <img src="images/FTS_CHRock.jpeg" width="512" height="512" alt="Big picture">
         <h3>(placeholder)</h3>
         <p>Description (placeholder)YAPYAPYAPYAPYAPYAPYA
             PYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPY
@@ -57,7 +53,7 @@
             YAPYAPYAPYAPYAPYAPYAP</p>
       </div>
       <div class="project">
-        <img src="placeholder" alt="Big picture">
+        <img src="images/D4VD_cover.png" width="512" height="512" alt="Big picture">
         <h3>(placeholder)</h3>
         <p>Description (placeholder) YAPYAPYAPYAPYAPYAPYA
             PYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPYAPY
@@ -74,7 +70,7 @@
       <h2>Connect with Me</h2>
       <div class="socialslinks">
         <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
-        <a href="https://twitter.com/yourhandle" target="_blank"><img src="twitter.png" alt="Twitter"></a>
+        <a href="https://www.facebook.com/profile.php?id=100007882848282" target="_blank"><img src="facebook.png" alt="Facebook"></a>
         <a href="https://github.com/yourusername" target="_blank"><img src="github.png" alt="GitHub"></a>
       </div>
     </div>
@@ -86,6 +82,6 @@
     </div>
   </footer>
   <script src="script.js"></script>
-  
+
 </body>
 </html>
