--- a/Web Portfolio/pages/About.html
+++ b/Web Portfolio/pages/About.html
@@ -22,14 +22,27 @@
   </header>
 
   <section id="about">
-    
-    <img src="/Web Portfolio/images/AI_web.png" width="80%" height="80%" alt="Big picture" class="test">
-    
     <div class="container">
-      <p><b>Mark Kenji Paulino</b> is a <b>Creative computing</b> student in <b>Bathspa University</b> RAK.
-        He specializes in AI voice cloning and synthesizing. Mark Kenji is an avid tinkerer and strives to
-        learn more about the world of machine learning and future technologies enabled by the advancement of AI.</p>
-    </div>
+      <div class="profile">
+          <img src="/Web Portfolio/images/profile_img.jpeg" alt="Big picture" class="test">
+
+          <p>
+            <b>Mark Kenji Paulino</b>
+            <br>
+            <b>Education</b> <br>
+            Currently pursuing a degree in Creative Computing at Bath Spa University, Mark Kenji has a solid foundation in the field, having graduated from the International Foundation Studies (IFS).
+            <br><br>
+            <b>Interests and Aspirations</b> <br>
+            Mark Kenji harbors a deep passion for Artificial Intelligence (AI) and AI tools. His ultimate goal is to leverage these interests to create innovative projects and solutions using AI technology.
+            <br><br>
+            <b>Strengths</b> <br>
+            Mark Kenji is a quick learner, with the ability to grasp new concepts swiftly and efficiently. He is a dedicated enthusiast, approaching academic and personal projects with the same passion and enthusiasm as his hobbies.
+            <br><br>
+            <b>Personal Approach</b> <br>
+            Mark Kenji possesses a unique work ethic, treating academic and creative works as enjoyable and fulfilling hobbies. This approach leads to high-quality, passionate output.
+          </p>
+        </div>
+      </div>
   </section>
 
   <footer>
