--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Web Portfolio/styles.css">
 </head>
 <body>
   <header>
@@ -12,10 +12,10 @@
       <div class="nav">
         <nav>
             <ul>
-                <li><a href="pages/About.html">About</a></li>
-                <li><a href="pages/Projects.html">Projects</a></li>
-                <li><a href="pages/Workflow.html">RVC</a></li>
-                <li><a href="pages/Socials.html">Socials</a></li>
+                <li><a href="/Web Portfolio/pages/About.html">About</a></li>
+                <li><a href="/Web Portfolio/pages/Projects.html">Projects</a></li>
+                <li><a href="/Web Portfolio/pages/Workflow.html">RVC</a></li>
+                <li><a href="/Web Portfolio/pages/Socials.html">Socials</a></li>
             </ul>
         </nav>
       </div>
@@ -24,7 +24,7 @@
   <section id="about">
    
     <div class="bigtitle">
-      <img src="images/portrait.jpg" width="100%" height="100%" alt="Big picture">
+      <img src="Web Portfolio/images/portrait.jpg" width="100%" height="100%" alt="Big picture">
         <div class="title">
           <h1><b>Hello</b></h1>
           <p>Bathspa University</p>
@@ -46,7 +46,7 @@
       <p>&copy; 2024 Portfolio. All rights reserved.</p>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <script src="Web Portfolio/script.js"></script>
 
 </body>
 </html>
