--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div class="nav">
         <nav>
             <ul>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Projects.html">Projects</a></li>
-                <li><a href="/Workflow.html">RVC</a></li>
-                <li><a href="/Socials.html">Socials</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Workflow.html">RVC</a></li>
+                <li><a href="Socials.html">Socials</a></li>
             </ul>
         </nav>
       </div>
