--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1 ><a href="index.html">Mark Kenji</a></h1>
+    <h1 ><a href="/index.html">Mark Kenji</a></h1>
       <div class="nav">
         <nav>
             <ul>
