drastic restructuring of folders because github refuses to work for some reason

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark's Portfolio</title>
-    <link rel="stylesheet" href="Web Portfolio/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
   <section id="about">
    
     <div class="bigtitle">
-      <img src="Web Portfolio/images/portrait.jpg" width="100%" height="100%" alt="Big picture">
+      <img src="images/portrait.jpg" width="100%" height="100%" alt="Big picture">
         <div class="title">
           <h1><b>Hello</b></h1>
           <p>Bathspa University</p>
