--- a/pages/About.html
+++ b/pages/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark's Portfolio</title>
-    <link rel="stylesheet" href="/Web Portfolio/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
   <section id="about">
     <div class="container">
       <div class="profile">
-          <img src="/Web Portfolio/images/profile_img.jpeg" alt="Big picture" class="test">
+          <img src="/images/profile_img.jpeg" alt="Big picture" class="test">
 
           <p>
             <b>Mark Kenji Paulino</b>
@@ -50,7 +50,7 @@
       <p>&copy; 2024 Portfolio. All rights reserved.</p>
     </div>
   </footer>
-  <script src="/Web Portfolio/script.js"></script>
+  <script src="/script.js"></script>
 
 </body>
 </html>
