--- a/pages/Workflow.html
+++ b/pages/Workflow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark's Portfolio</title>
-    <link rel="stylesheet" href="/Web Portfolio/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
   <section id="about" class="RVC">
     
     <a href="https://github.com/RVC-Project/Retrieval-based-Voice-Conversion-WebUI/blob/main/docs/en/README.en.md" target="_blank">
-      <img src="/Web Portfolio/images/AI_web.png" width="100%" height="100%" alt="Big picture" class="RVCIMG">
+      <img src="/images/AI_web.png" width="100%" height="100%" alt="Big picture" class="RVCIMG">
     </a>
     <div class="RVC2">
       <h1>Real Time Voice Changer (RVC)</h1>
@@ -37,7 +37,7 @@
       <p>&copy; 2024 Portfolio. All rights reserved.</p>
     </div>
   </footer>
-  <script src="/Web Portfolio/script.js"></script>
+  <script src="/script.js"></script>
 
 </body>
 </html>
